# flask-typescript

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  tsconfig.json
example/: app.py  schema.py  test.py
src/: decorator.py  generator.py
src/flask_typescript/: constants.py  decorator.py  generator.py
src/flask_typescript/templates/: client.ts  interface.ts  overrides.ts
src/templates/: import.ts  interface.ts  overrides.ts
typescript/: index.ts
