[metadata]
name = Flask-Typescript
version = 0.0.1
author = Michael Timbrook
author_email = timbrook480@gmail.com
description = Typescript generator for typed flask views
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/7imbrook/flask-typescript
; TODO validate this
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src

; Include all typescript files
[options.package_data]
flask_typescript = templates/*.ts